syntax="proto3";

package notification_service;

option go_package = "genproto/notification_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "user_token.proto";

service NotificationService {
  rpc GetSingleNotification (GetSingleNotificationRequest) returns (Notification) {}
  rpc GetAllNotification (GetAllNotificationsRequest) returns (GetAllNotificationsResponse) {}
  rpc CreateNotification (CreateNotificationRequest) returns (Notification) {}
  rpc UpdateNotification (UpdateNotificationRequest) returns (Notification) {}
  rpc DeleteNotification (DeleteNotificationRequest) returns (google.protobuf.Empty) {}
  rpc CreateManyNotification (CreateManyNotificationRequest) returns (google.protobuf.Empty) {}
  rpc CreateUserToken(CreateUserTokenRequest) returns (CreateUserTokenResponse) {}
  rpc GetListUserToken(GetListUserTokenRequest) returns (ListUserToken) {}
  rpc DeleteUserToken(DeleteUserTokenRequest) returns (google.protobuf.Empty) {}
}

message GetSingleNotificationRequest {
  string id = 1;
}

message GetAllNotificationsRequest {
  string user_id = 1;
  string type = 2;
  string status = 3;
  string sort = 4;
  int32 limit = 5;
  int32 offset = 6;
}

message GetAllNotificationsResponse {
  repeated Notification notifications = 1;
}

message CreateNotificationRequest {
  string user_id = 1;
  string type = 2;
  string status = 3;
  Notification data = 4;
  string token = 5;
}

message UpdateNotificationRequest {
  string id = 1;
  string notif_status_id = 2;
}

message DeleteNotificationRequest {
  string id = 1;
}

message Notification {
  string id = 1;
  string content = 2;
  string title = 3;
  string sender_id = 4;
  string platform_id = 5;
  string notif_status_id = 6;
  string created_at = 7;
}

message NotificationUsers {
  string id = 1;
  string user_id = 2;
  int64 sent_count = 3;
  string notification_id = 4;
  string status = 5;
  string created_at = 6;
  string scheduled_at = 7;
}

message NotificationStatus {
  string id = 1;
  string name = 2;
  string created_at = 3;
}

message ManyNotificationData {
  string user_id = 1;
  Notification data = 2;
}

message CreateManyNotificationRequest {
  repeated ManyNotificationData notitication_data = 1;
}