syntax="proto3";

package notification_service;

option go_package = "genproto/notification_service";

import "google/protobuf/empty.proto";

message UserToken {
    string id = 1;
    string user_id = 2;
    string token = 3;
    string created_at = 4;
}

message CreateUserTokenRequest {
    string user_id = 1;
    string token = 2;
}

message CreateUserTokenResponse {
    string user_token_id = 1;
}

message GetListUserTokenRequest {
    string user_id = 1;
}

message ListUserToken {
    repeated UserToken user_tokens = 1;
}

message DeleteUserTokenRequest {
    string user_token_id = 1;
}

// The proto file is located in the root of the project. The proto file is used to generate the gRPC service and the messages. The generated code is located in the genproto/notification_service directory.